@@ -27,6 +27,13 @@ Version 4.6.1  [ (under development) ]
             - This is the new name for the old class NPerm (see above).
             - New routines S4Index() and orderedS4Index() for reverse
               lookups into the arrays NPerm::S4 and NPerm::orderedS4.
+        Class NTetrahedron:
+            - New routine getVertexMapping(), which facilitates a
+              consistent orientation around the given vertex for the
+              three remaining vertices in each tetrahedron.
+        Class NVertexEmbedding:
+            - New routine getVertices(), which facilitates a consistent
+              orientation for the three remaining vertices in each tetrahedron.
     UTILITIES:
         tricensus-mpi-status:
             - Now finishes with a running total of all triangulations found.
